# G4-CT-Dose

./: .gitignore  CMakeLists.txt  HU2mat.py  README.md  bsub-call.py  bsub_limits.inp  check-img.py  dosescan.cc  make.bat  make.sh  mat_24.txt  mat_97.txt  mat_99.txt  scan.ini
include/: PhyList.hh  PrimaryGen.hh  ScanGlobals.hh  ScanInfo.hh  VoxelConstruction.hh  VoxelNestedParam.hh  VoxelStep.hh
src/: PhyList.cc  PrimaryGen.cc  ScanInfo.cc  VoxelConstruction.cc  VoxelNestedParam.cc  VoxelStep.cc
